test/e2e/testdata/host-normalization.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: strip-trailing-host-dot-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
  headers:
    host:
      stripTrailingHostDot: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-host-normalization
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames:
    - host-normalization.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /host-normalization
      backendRefs:
        - name: infra-backend-v1
          port: 8080
